--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yak-layout",
   "version": "0.0.1",
-  "description": "Keyboard layout produced via yak-shaving",
+  "description": "Keyboard layout optimizer",
   "main": "dist/index.js",
   "scripts": {
     "build": "gulp build",
@@ -28,22 +28,22 @@
   },
   "homepage": "https://github.com/wincent/yak-layout",
   "devDependencies": {
-    "babel": "^5.8.20",
-    "babel-core": "^5.8.20",
-    "babel-eslint": "^4.0.5",
-    "eslint": "^1.0.0",
-    "expect": "^1.8.0",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^5.2.0",
-    "gulp-eslint": "^1.0.0",
-    "gulp-flowtype": "^0.4.7",
-    "gulp-spawn-mocha": "^2.2.1",
-    "gulp-util": "^3.0.6",
-    "mocha": "^2.2.5",
-    "sinon": "^1.15.4"
+    "babel": "5.8.20",
+    "babel-core": "5.8.20",
+    "babel-eslint": "4.0.5",
+    "eslint": "1.0.0",
+    "expect": "1.8.0",
+    "gulp": "3.9.0",
+    "gulp-babel": "5.2.0",
+    "gulp-eslint": "1.0.0",
+    "gulp-flowtype": "0.4.7",
+    "gulp-spawn-mocha": "2.2.1",
+    "gulp-util": "3.0.6",
+    "mocha": "2.2.5",
+    "sinon": "1.15.4"
   },
   "dependencies": {
-    "bluebird": "^2.9.34",
-    "yargs": "^3.18.0"
+    "bluebird": "2.9.34",
+    "yargs": "3.18.0"
   }
 }
