Be slightly more reasonable about preferred io.js version

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "sinon": "1.15.4"
   },
   "engines": {
-    "node": "> 3.0.0"
+    "node": ">= 3.0.0"
   },
   "dependencies": {
     "babel-core": "5.8.20",
